fixed clipping bug in astrological circles

--- a/assets/exprimental.scss
+++ b/assets/exprimental.scss
@@ -341,7 +341,7 @@
 	top: 10px;
 	right:  -400px;
 	width: 1047px;
-	height: 983px;
+	height: 1047px;
 	display: flex;
   	justify-content: center;
   	position: relative;
